--- a/src/js/index.scss
+++ b/src/js/index.scss
@@ -15,6 +15,10 @@
 //   background-size: cover;
 //   position: relative;
 // }
+
+.MuiInputBase-root{
+  left: 547px !important;
+}
 a{
   text-decoration: none;
   color: gray;
